[#99] chore : 피드백 처리 및 코드 개선 - 비밀번호 활성화에 따른 예외처리 개선